Change log
==========

1.0 (unreleased)
----------------
- Initial release. For changes prior to this release please see the 
  ``dataflake.ldapconnection`` package up to release 1.4.
- add convenience ``tox`` script to buildout
- fix problem with BASE scoped-searches that specified additional 
  filters
- add coverage testing to tox configuration