@@ -1,8 +1,15 @@
 Change log
 ==========
 
+TODO: convert remaining doctests
+
 1.0 (unreleased)
 ----------------
+- refactor the monolithic original module into manageable and 
+  testable submodules
+- convert functions to class methods
+- convert doctests to unit tests
+- improve test coverage
 - Initial release. For changes prior to this release please see the 
   ``dataflake.ldapconnection`` package up to release 1.4.
 - add convenience ``tox`` script to buildout
